gcc-10 (10.1.0-2) UNRELEASED; urgency=medium

  * Remove the unmaintained neon packaging bits.
  * Add build dependency on unzip to fix libphobos test failures.
  * Fix issue 19861 - core.cpuid reports the wrong number of threads.
    Closes: #960150.
  * Build using GCC 10 on recent distro versions.
  * Fix gnat tests to find the libgnat_utils shared library. Closes: #960270.

 -- Matthias Klose <doko@debian.org>  Mon, 11 May 2020 13:42:27 +0200

gcc-10 (10.1.0-1) unstable; urgency=medium

  * GCC 10.1.0 release.
  * lib*stdc++6: Depend on lib*gcc-sN instead of lib*gccN.
  * Build libphobos on hppa-linux-gnu.
  * Update NEWS files for GCC 10.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Thu, 07 May 2020 13:44:26 +0200

gcc-10 (10-20200502-1) unstable; urgency=medium

  * GCC 10.1 release candidate.
  * GCC snapshot, taken from the gcc-10 branch (20200502, 0118d0397f9).
    - Fix PR objc/94637, @selector() broken for selectors containing repeated
      colons. Closes: #959127.
  * Increase the testsuite timeout on riscv64.
  * Fix sparc64 multilib cross build (Helmut Grohne). Closes: #958909.
  * Fix GDC Issue 19367 - std.net.curl does not understand HTTP/2 status lines.
    LP: #1876293.
  * Update libgphobos symbols files.

 -- Matthias Klose <doko@debian.org>  Sat, 02 May 2020 14:09:59 +0200

gcc-10 (10-20200425-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200425, cf3f7b309ffd).
    - Fix PR middle-end/94647. Closes: #958062.
  * Fix local patch for PR jit/87808. Closes: #954898.
  * gcc-snapshot: Depend on nvptx-tools with the nvptx offload compiler.
  * Provide symlinks for the offload target tools in <gcclibdir>/accel/<target>.
  * Don't include lib*gomp1 and libgcc4 in the control file, when not building
    the common libraries.
  * Build libphobos on powerpc*, libdruntime only.

 -- Matthias Klose <doko@debian.org>  Sat, 25 Apr 2020 18:07:48 +0200

gcc-10 (10-20200418-1) unstable; urgency=medium
