@@ -695,7 +695,7 @@ ifneq (,$(findstring mipsisa64r6el-linux-gnuabin32,$(DEB_TARGET_GNU_TYPE)))
     endif
   endif
 endif
- 
+
 ifneq (,$(findstring mipsisa64r6-linux-gnuabin32,$(DEB_TARGET_GNU_TYPE)))
   CONFARGS += --with-mips-plt
   ifeq ($(multilib),yes)
@@ -748,8 +748,17 @@ ifneq (,$(findstring hppa-linux,$(DEB_TARGET_GNU_TYPE)))
 endif
 
 ifneq (,$(offload_targets))
+  ifneq (,$(filter nvptx-none, $(offload_targets)))
+	offload_opt = nvptx-none=$(CURDIR)/$(d)-nvptx/$(PF)
+  endif
+  ifneq (,$(filter $(gcn_target_name), $(offload_targets)))
+	offload_opt += $(gcn_target_name)=$(CURDIR)/$(d)-gcn/$(PF)
+  endif
+  ifneq (,$(filter hsa, $(offload_targets)))
+	offload_opt += hsa
+  endif
   CONFARGS += \
-	--enable-offload-targets=$(subst $(SPACE),$(COMMA),$(offload_targets))
+	--enable-offload-targets=$(subst $(SPACE),$(COMMA),$(strip $(offload_opt)))
   ifeq ($(with_offload_nvptx),yes)
     CONFARGS += --without-cuda-driver
   endif
@@ -1670,7 +1679,10 @@ ifeq ($(DEB_HOST_GNU_SYSTEM),gnu)
 endif
 
 check: $(check_stamp)
-$(check_stamp): $(filter $(build_stamp) $(build_jit_stamp) $(build_hppa64_stamp) $(build_nvptx_stamp) $(build_gcn_stamp), $(build_dependencies))
+$(check_stamp): $(filter $(build_stamp) $(build_jit_stamp) $(build_hppa64_stamp) $(build_nvptx_stamp) $(build_gcn_stamp), $(build_dependencies)) \
+    $(if $(filter nvptx-none, $(offload_targets)), $(install_nvptx_stamp)) \
+    $(if $(filter $(gcn_target_name), $(offload_targets)), $(install_gcn_stamp))
+
 	rm -f test-protocol
 	rm -f $(builddir)/runcheck*
 
@@ -2497,6 +2509,14 @@ $(install_nvptx_stamp): $(build_nvptx_stamp) $(install_stamp) \
 	find $(d)-nvptx -name \*.la | xargs rm -f
 	rm -rf $(d)-nvptx/$(PF)/nvptx-none/include
 	-find $(d)-nvptx -type d -empty -delete
+
+	: # a complete compiler installation needed for running the tests
+	ln -sf lib $(d)-nvptx/$(PF)/libexec
+	ln -sf /usr/bin/nvptx-none-ar     $(d)-nvptx/$(gcc_lib_dir)/accel/nvptx-none/ar
+	ln -sf /usr/bin/nvptx-none-as     $(d)-nvptx/$(gcc_lib_dir)/accel/nvptx-none/as
+	ln -sf /usr/bin/nvptx-none-ld     $(d)-nvptx/$(gcc_lib_dir)/accel/nvptx-none/ld
+	ln -sf /usr/bin/nvptx-none-ranlib $(d)-nvptx/$(gcc_lib_dir)/accel/nvptx-none/ranlib
+
 	@echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 	find $(d)-nvptx
 	@echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -2551,6 +2571,19 @@ $(install_gcn_stamp): $(build_gcn_stamp) $(install_stamp) \
 	rm -rf $(d)-gcn/$(PF)/$(gcn_target_name)/include
 	rm -rf $(d)-gcn/$(PF)/lib/gcc/$(DEB_HOST_GNU_TYPE)/$(versiondir)/include
 	rm -rf $(d)-gcn/$(PF)/lib/gcc/$(DEB_HOST_GNU_TYPE)/$(versiondir)/gfx900
+
+	: # a complete compiler installation needed for running the tests
+	ln -sf lib $(d)-gcn/$(PF)/libexec
+	ln -sf /usr/lib/llvm-$(gcn_tools_llvm_version)/bin/llvm-ar \
+	  $(d)-gcn/$(gcc_lib_dir)/accel/$(gcn_target_name)/ar
+	ln -sf /usr/lib/llvm-$(gcn_tools_llvm_version)/bin/llvm-mc \
+	  $(d)-gcn/$(gcc_lib_dir)/accel/$(gcn_target_name)/as
+	ln -sf /usr/lib/llvm-$(gcn_tools_llvm_version)/bin/lld \
+	  $(d)-gcn/$(gcc_lib_dir)/accel/$(gcn_target_name)/ld
+	ln -sf /usr/lib/llvm-$(gcn_tools_llvm_version)/bin/llvm-nm \
+	  $(d)-gcn/$(gcc_lib_dir)/accel/$(gcn_target_name)/nm
+	ln -sf /usr/lib/llvm-$(gcn_tools_llvm_version)/bin/llvm-ranlib \
+	  $(d)-gcn/$(gcc_lib_dir)/accel/$(gcn_target_name)/ranlib
 
 	-find $(d)-gcn -type d -empty -delete
 	@echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
