@@ -6,8 +6,10 @@ gcc-10 (10.1.0-2) UNRELEASED; urgency=medium
     Closes: #960150.
   * Build using GCC 10 on recent distro versions.
   * Fix gnat tests to find the libgnat_utils shared library. Closes: #960270.
+  * Run the testsuite with the offload compilers installed into the temporary
+    install location.
 
- -- Matthias Klose <doko@debian.org>  Mon, 11 May 2020 13:42:27 +0200
+ -- Matthias Klose <doko@debian.org>  Tue, 12 May 2020 13:53:21 +0200
 
 gcc-10 (10.1.0-1) unstable; urgency=medium
 
